--- a/tasks/ai_svc_set_host_names_roles.yaml
+++ b/tasks/ai_svc_set_host_names_roles.yaml
@@ -28,38 +28,48 @@
     - name: Get the list of hosts from the API
       uri:
         headers: "{{ compiled_uri_headers }}"
-        url: "{{ assisted_service_endpoint }}/clusters/{{ cluster_id }}/hosts"
+        #url: "{{ assisted_service_endpoint }}/clusters/{{ cluster_id }}/hosts"
+        url: "{{ assisted_service_endpoint }}/infra-envs/{{ infraenv_id }}/hosts"
         return_content: yes
         method: GET
         status_code: 200
       register: ai_svc_list_of_hosts
 
-    - name: d
-      debug:
-        msg: "{{ ai_svc_list_of_hosts }}"
-
-    - name: Template out the JSON for the Host Names and Roles
+    - name: template out new v2 api map
       template:
-        src: templates/host_names_and_roles.json.j2
-        dest: "{{ generated_asset_directory }}/{{ cluster_id }}/host_names_roles.json"
-      register: template_host_name_roles_results
-      retries: 20
-      delay: 20
-      until: template_host_name_roles_results is not failed
+        src: templates/v2_host_roles_names_map.json.j2
+        dest: "{{ generated_asset_directory }}/{{ cluster_id }}/v2_host_roles_names_map.json"
 
-    - name: Patch the Assisted Installer API with the host names and roles
+    - name: Set template fact
+      set_fact:
+        v2_host_roles_names_map: "{{ lookup('file', generated_asset_directory +'/'+ cluster_id +'/v2_host_roles_names_map.json') }}"
+
+    - name: Set the hostnames of the nodes
       uri:
         headers: "{{ compiled_uri_headers }}"
-        url: "{{ assisted_service_endpoint }}/clusters/{{ cluster_id }}"
+        url: "{{ assisted_service_endpoint }}/infra-envs/{{ infraenv_id }}/hosts/{{ host_item.id }}"
         return_content: yes
         method: PATCH
-        body: "{{ lookup('file', generated_asset_directory +'/'+ cluster_id +'/host_names_roles.json') }}"
+        body: "{\"host_name\": \"{{ host_item.hostname }}\"}"
         status_code: 201
         body_format: json
-      register: host_name_roles_results
-      retries: 20
-      delay: 20
-      until: host_name_roles_results is not failed
+      loop: "{{ v2_host_roles_names_map }}"
+      loop_control:
+        loop_var: host_item
+
+    - name: Set the host roles of the nodes
+      uri:
+        headers: "{{ compiled_uri_headers }}"
+        url: "{{ assisted_service_endpoint }}/infra-envs/{{ infraenv_id }}/hosts/{{ host_item.id }}"
+        return_content: yes
+        method: PATCH
+        body: "{\"host_role\": \"{{ host_item.role }}\"}"
+        status_code: 201
+        body_format: json
+      loop: "{{ v2_host_roles_names_map }}"
+      loop_control:
+        loop_var: host_item
+      when: cluster_type == "Standard"
 
     - name: Pause for 5 seconds to let the API catch up
       wait_for:
