--- a/destroy.yaml
+++ b/destroy.yaml
@@ -59,6 +59,26 @@
 
     - name: Delete the infraenv from the Assisted Installer service
       block:
+      - name: Get the list of hosts from the API
+        uri:
+          headers: "{{ compiled_uri_headers }}"
+          url: "{{ assisted_service_endpoint }}/infra-envs/{{ infraenv_id }}/hosts"
+          return_content: yes
+          method: GET
+          status_code: 200
+        register: ai_svc_list_of_hosts
+
+      - name: Delete the hosts from the infraenv
+        uri:
+          headers: "{{ compiled_uri_headers }}"
+          url: "{{ assisted_service_endpoint }}/infra-envs/{{ infraenv_id }}/hosts/{{ host_item.id }}"
+          return_content: yes
+          method: DELETE
+          status_code: 204
+        loop: "{{ ai_svc_list_of_hosts.json }}"
+        loop_control:
+          loop_var: host_item
+
       - name: Delete the infraenv
         uri:
           headers: "{{ compiled_uri_headers }}"
