--- a/bootstrap.yaml
+++ b/bootstrap.yaml
@@ -108,24 +108,27 @@
             path: "{{ generated_asset_directory }}/deployment-{{ deployment_name }}.json"
             state: absent
 
-        - name: SSH Key Migration
-          include_tasks: tasks/ssh_keys.yaml
-
-        - name: Patch in Cluster Preconfiguration for Networking
-          include_tasks: tasks/ai_svc_preconfig_networking.yaml
-
-        - name: Configure ISO Parameters
-          include_tasks: tasks/ai_svc_configure_iso_params.yaml
-          
-        - name: Add Additional Root CAs to the Discovery ISO
-          include_tasks: tasks/ai_svc_add_additionalTrustBundle_to_infraenv.yaml
-          when: additionalTrustBundles is defined
-
       when: deployment_name != ""
+
+    - name: SSH Key Migration
+      include_tasks: tasks/ssh_keys.yaml
+
+    - name: Patch in Cluster Preconfiguration for Networking
+      include_tasks: tasks/ai_svc_preconfig_networking.yaml
+
+    - name: Configure ISO Parameters
+      include_tasks: tasks/ai_svc_configure_iso_params.yaml
+      
+    - name: Add Additional Root CAs to the Discovery ISO
+      include_tasks: tasks/ai_svc_add_additionalTrustBundle_to_infraenv.yaml
+      when: additionalTrustBundles is defined
 
     - name: Inject extra manifests
       include_tasks: tasks/ai_svc_preconfig_extra_manifests.yaml
       when: injected_manifests is defined
+
+    - name: Configure ISO Parameters
+      include_tasks: tasks/ai_svc_configure_iso_params.yaml
 
     - name: Set core user password
       block:      
@@ -183,6 +186,7 @@
               set_fact:
                 nutanix_ocp_ai_iso_uuid: "{{ image.uuid }}"
                 nutanix_ocp_ai_iso_vm_disk_uuid: "{{ image.vm_disk_id }}"
+                nutanix_ocp_ai_iso_name: "{{ image.name }}"
               when: image.name == "ocp-ai-{{ cluster_id }}"
               loop: "{{ nutanix_images_info.json.entities }}"
               loop_control:
@@ -252,11 +256,18 @@
               #    path: "{{ generated_asset_directory }}/{{ cluster_id }}/tmp_server"
           when: assisted_service_authentication == "bearer-token"
 
-        - name: Create VMs on via Prism
-          include_tasks: tasks/nutanix_create_vms_mixed_api_patch.yaml
+        #- name: Create VMs on via Prism
+        #  include_tasks: tasks/nutanix_create_vms_mixed_api_patch.yaml
+        #  loop: "{{ cluster_nodes }}"
+        #  loop_control:
+        #    loop_var: node
+
+        - name: Create VMs on Prism via new NTNX Ansible Collections
+          include_tasks: tasks/nutanix_create_vms_with_collection.yaml
           loop: "{{ cluster_nodes }}"
           loop_control:
             loop_var: node
+
       tags:
         - create_nutanix_cluster
 
